@@ -15,12 +15,15 @@ import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.test.web.client.MockRestServiceServer;
 import org.springframework.web.client.RestTemplate;
 
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpSession;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.method;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.requestTo;
@@ -30,6 +33,8 @@ import static org.springframework.test.web.client.response.MockRestResponseCreat
 public class ConverterServiceTest {
     @Mock
     private ConvertHistoryRepository convertHistoryRepository;
+    @Mock
+    private HttpServletRequest httpServletRequest;
     @Mock
     private RestTemplate restTemplate;
     @InjectMocks
@@ -41,67 +46,28 @@ public class ConverterServiceTest {
     }
     @Test
     void testGetConvertHistory() {
-        // Mock the response from the repository
-        List<ConvertHistory> histories = Arrays.asList(new ConvertHistory(0L, "USD", "PLN", 20.0, 	79.5, LocalDateTime.now()));
+        List<ConvertHistory> histories = List.of(new ConvertHistory(0L, "USD", "PLN", 20.0, 79.5,
+                "user_d343224b-65f5-4fb8-9c75-b00d0d6bd9bf", LocalDateTime.now()));
 
-        given(convertHistoryRepository.findAll()).willReturn(histories);
+        HttpSession httpSession = mock(HttpSession.class);
+        given(httpServletRequest.getSession()).willReturn(httpSession);
+        given(httpSession.getAttribute("userIdentifier")).willReturn("user_d343224b-65f5-4fb8-9c75-b00d0d6bd9bf");
 
-        // Perform the test
+        given(convertHistoryRepository.findAllByUserToken("user_d343224b-65f5-4fb8-9c75-b00d0d6bd9bf")).willReturn(histories);
         List<ConvertHistory> result = converterService.getConvertHistory();
 
-        // Verify the result
         assertEquals(histories, result);
     }
     @Test
     void testClearHistory() {
-        // Perform the test
+
+        HttpSession httpSession = mock(HttpSession.class);
+        given(httpServletRequest.getSession()).willReturn(httpSession);
+        given(httpSession.getAttribute("userIdentifier")).willReturn("user_d343224b-65f5-4fb8-9c75-b00d0d6bd9bf");
         converterService.clearHistory();
 
-        // Verify that the repository's deleteAll method is called
-        verify(convertHistoryRepository).deleteAll();
+        verify(convertHistoryRepository).deleteAllByUserToken("user_d343224b-65f5-4fb8-9c75-b00d0d6bd9bf");
     }
 
-    @Test
-    void testConversionWithDifferentCurrencies() {
-        MockRestServiceServer mockServer = MockRestServiceServer.createServer(restTemplate);
-
-        mockServer.expect(requestTo("http://api.nbp.pl/api/exchangerates/rates/A/USD"))
-                .andExpect(method(HttpMethod.GET))
-                .andRespond(withSuccess(
-                        "{" +
-                                "\"table\": \"A\","+
-                                "\"currency\": \"dolar amerykański\", " +
-                                "\"code\": \"USD\", " +
-                                "\"rates\": [ " +
-                                "{" +
-                                "\"no\": \"233/A/NBP/2023\"," +
-                                "\"effectiveDate\": \"2023-12-01\"," +
-                                "\"mid\": 3.9910" +
-                                "}" +
-                                "]" +
-                                "}", MediaType.APPLICATION_JSON));
-        mockServer.expect(requestTo("http://api.nbp.pl/api/exchangerates/rates/A/EUR"))
-                .andExpect(method(HttpMethod.GET))
-                .andRespond(withSuccess(
-                        "{" +
-                                "\"table\": \"A\","+
-                                "\"currency\": \"euro\", " +
-                                "\"code\": \"EUR\", " +
-                                "\"rates\": [ " +
-                                "{" +
-                                "\"no\": \"233/A/NBP/2023\"," +
-                                "\"effectiveDate\": \"2023-12-01\"," +
-                                "\"mid\": 4.3494" +
-                                "}" +
-                                "]" +
-                                "}", MediaType.APPLICATION_JSON));
-
-        Double result = converterService.getConvertedValue("USD", "EUR", 100.0);
-
-        // Expected result: (100 * 1.5) / 2.0 = 75.0
-        assertEquals(75.0, result);
-
-        mockServer.verify();
-    }
 
 }
